Lesson 7 final commit

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    <!--
       Project Name:  Recipe Display Application
       
-      Author: 
+      Author: Shawnie Houston
       
-      Date:   
+      Date:   11/30/16
 
       Filename: index.html
    -->  
@@ -53,6 +53,8 @@
       </center>
    </article>
 
+   <script src="jquery-1.11.1.min.js"> </script>
+   <script src="script.js"> </script>
 </body>
 </html>
 
